# OpenFace

./: .gitignore  CMakeLists.txt  MySettingsAndCommands.txt
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/include/: GazeEstimation.h
lib/local/GazeAnalyser/src/: GazeEstimation.cpp
lib/local/LandmarkDetector/src/: LandmarkDetectorParameters.cpp
lib/local/commClient/: CMakeLists.txt
lib/local/commClient/include/: CommClient.hxx
lib/local/commClient/src/: CommClient.cxx
